...
        android:padding="0dp"
        android:background="@null"
        android:src="@drawable/profile_default"
        android:contentDescription="@string/profile_list_item_profile_icon_content_description" />

    <RelativeLayout
        android:id="@+id/relative_layout_profile_info"
        android:layout_toEndOf="@+id/image_profile_icon"
        android:layout_toStartOf="@id/image_profile_details_icon"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_details_provider_example"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
...
