<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ SPDX-FileCopyrightText: Copyright (c) 2024-2025 Infineon Technologies AG
  ~ SPDX-License-Identifier: MIT
  -->

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_list_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list_selected_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:listSelector="@android:color/transparent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:paddingTop="20dp"
            android:text="@string/profile_list_available_profiles"
            android:textAlignment="viewStart"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/list_available_profiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>