...
    <string name="profile_details_status">Status</string>
    <string name="profile_details_status_enabled">Enabled</string>
    <string name="profile_details_status_disabled">Disabled</string>
    <string name="profile_details_button_enable_text">Enable</string>
    <string name="profile_details_button_disable_text">Disable</string>
    <string name="profile_details_button_delete_text">Delete</string>
    <string name="profile_details_button_switch_text">Switch</string>
    <string name="profile_details_edit_profile_nickname_dialog_title">Edit the profile nickname</string>

    <!-- eUICC Info Activity -->
    <string name="euicc_info_title">eUICC information</string>
    <string name="euicc_info_progress_getting_euicc_info">Reading eUICC information</string>
    <string name="euicc_info_eid_title">EID</string>
...
